# aero-research-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  HANDOFF.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  STAGE-3-OUTPUTS.md  STAGE-4-OUTPUTS.md  STAGE-5-OUTPUTS.md  STAGE-5-REDESIGN.md  VISION.md  alembic.ini  dvc.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md
.claude/commands/: handoff-write.md  stage-end.md  stage-start.md
.claude/hooks/: block-dangerous-bash.sh
.claude/rules/: conventional-commits.md  fail-loud-pydantic.md  flapping-validation-ladder.md  handoff-discipline.md  optimization-integrity.md
.claude/skills/: README.md
.dvc/: config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  commit-lint.yml  data-origin-fence.yml  docs-sync.yml  import-platform-only.yml  license-audit.yml  lint.yml  non-commercial-fence.yml  provenance-completeness.yml  small-signal-gate.yml  test.yml  type.yml  vv-required.yml  vv-scale-resolving.yml  vv-smoke.yml  vv-transonic.yml
aero/: __init__.py  cli.py
aero/adapters/: __init__.py  _base.py
aero/optimize/: __init__.py  accelerated.py  acquisition.py  airfoil_case.py  bo.py  corpus.py  design_space.py  gp.py  mesh_family.py  objective.py  report.py  speedup.py  turbulent_airfoil.py
aero/orchestration/: __init__.py  _base.py  cost_cap.py  local_ssh.py
aero/postprocess/: __init__.py  _base.py  cycle_detection.py  efficiency.py  flapping_forces.py  flapping_kinematics.py  forces.py  frequency.py  phase_averaging.py  window_means.py
aero/provenance/: __init__.py  db.py  four_fold.py  mlflow.py  mlflow_basic.py
aero/surrogates/: __init__.py  gp_bootstrap.py
aero/vv/: __init__.py  _base.py  cross_solver_compare.py  dashboard.py  mesh_sweep.py  paired_difference.py  reportable.py  reportable_compose.py  statistical_uncertainty.py
aero_research_platform/: __init__.py
aero_research_platform/cfd/: __init__.py
aero_research_platform/evidence/: __init__.py  aero_metrics.py  riblet_drag_reduction.py
aero_research_platform/geometry/: __init__.py  naca.py  riblet.py
aero_research_platform/llm/: __init__.py
aero_research_platform/meshing/: __init__.py  airfoil_cmesh.py  periodic_riblet_strip.py
aero_research_platform/optimization/: __init__.py
aero_research_platform/surrogates/: __init__.py
ansible/: README.md  ansible.cfg  inventory.yml  requirements.yml  site.yml
ansible/group_vars/: aero_lxc.yml
campaigns/: 01-naca0012-baseline.yaml  01b-naca0012-aoa10-rerun.yaml  02-flat-plate-riblet-bechert-pilot.yaml  02-flat-plate-riblet-bechert.yaml  03-naca0012-riblet-sweep.yaml  04-flat-plate-riblet-les-pilot.yaml  05-flat-plate-riblet-les-sweep.yaml
campaigns/_shared/: targets.yaml
conf/: config.yaml
conf/case/: naca0012.yaml
conf/mlflow/: default.yaml
conf/provenance/: default.yaml
conf/storage/: cloud.yaml  minio.yaml  nas.yaml  nfs.yaml
conf/surrogate/: domino.yaml
containers/: SHA256SUMS  SIGNING_KEY_FINGERPRINT.txt  _base.def  hello-world.def  jax-fluids.Dockerfile  jax-fluids.def  nekrs.Dockerfile  nekrs.def  openfoam-esi.def  physicsnemo-run.sh  physicsnemo.def  pyfr.Dockerfile  pyfr.def  su2-v8.Dockerfile  su2-v8.def  surrogate-smoke.Dockerfile  surrogate-smoke.def
data/bechert-1997-fig5/: README.md  digitized.csv
data/datasets/: DATASET-LICENSES.md
data/vv/: stage12_cylinder_gci.json  stage12_reportable_oscillating_cylinder_lockin.json  stage13_reportable_plunging_airfoil_hg2007_st02.json  stage13_reportable_plunging_airfoil_hg2007_st02_lm.json  stage13_reportable_plunging_airfoil_hg2007_st03.json  stage13_reportable_plunging_airfoil_hg2007_st03_lm.json  stage14_flapping_nogo.json  stage15_grid_convergence.json  stage15_optimization.json  stage16_courant_diag.json  stage16_divergence_diag.json  stage16_grid_convergence.json  stage16_optimization.json  stage16_relaxed_convergence.json  stage16_relaxed_optimization.json  stage16_urans_convergence.json  stage16_urans_pathology.json  stage16_urans_probe.json  stage17_arm_direct_s0.json  stage17_arm_direct_s1.json  stage17_arm_direct_s2.json  stage17_arm_surrogate_explore.json  stage17_arm_surrogate_s0.json  stage17_arm_surrogate_s1.json  stage17_arm_surrogate_s2.json  stage17_optimization.json  stage17_speedup.json  stage17_surrogate_cert.json  stage17_surrogate_cert_v2_refused.json
db/: env.py
db/migrations/: 004_provenance.py  004_provenance.sql
db/provision/: aero_databases.sql
docs/: vv-dashboard.html
docs/adrs/: ADR-001-license-and-governance.md  ADR-002-proxmox-topology.md  ADR-003-openfoam-walking-skeleton.md  ADR-004-four-fold-provenance-contract.md  ADR-005-tmr-vv-harness.md  ADR-006-solver-protocol-and-su2-adapter.md  ADR-007-gpu-solver-adapters-and-cost-cap.md  ADR-008-jax-fluids-and-surrogate-protocol.md  _template.md  (+24 more)
notebooks/: 01-validation-naca0012.ipynb  02-bechert-1997-replication.ipynb
scripts/: README.md  _apptainer_sign.sh  aero_progress.py  build_base_sifs.sh  build_dataset_manifest.py  build_jax_fluids_sif.sh  build_nekrs_sif.sh  build_openfoam_sif.sh  build_physicsnemo_sif.sh  build_pyfr_sif.sh  build_su2_sif.sh  build_surrogate_smoke_sif.sh  check_handoff_exists.sh  download_ahmedml.sh  download_drivaerml.sh  download_drivaernet_plus_plus.sh  download_windsorml.sh  preamble.sh  provision_aero_lxc.sh  pull_flat_plate_results.py  pull_naca0012_results.py  push_templates.sh  regenerate_status.sh  run_long.sh  smoke_flat_plate.py  smoke_naca0012.py  stage07_first_h100_run.py  stage09_domino_train.py  stage11_moving_vv.py  stage12_cylinder_gci.py  stage12_reportable.py  stage13_gci.py  stage13_reportable.py  stage14_flapping_vv.py  stage14_gci.py  stage14_lev_snapshots.py  stage14_reportable.py  stage15_airfoil_opt.py  stage15_camber_probe.py  stage15_grid_order.py  (+8 more)
sky/: README.md  openfoam-cpu.yaml
tests/: conftest.py  test_naca0012_cmesh.py  test_naca0012_geometry.py  test_periodic_riblet_strip.py  test_riblet_geometry.py  test_smoke.py
(+373 files in other folders)
