[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aero"
version = "0.0.1"
description = "Open-source, reproducibility-first aerodynamic shape-optimization platform (CFD as ground truth)"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Louis Ernesto Schulte Moredo", email = "gr7x8mjy5d@privaterelay.appleid.com" },
]
keywords = [
    "computational-fluid-dynamics",
    "aerodynamics",
    "openfoam",
    "su2",
    "pyfr",
    "nekrs",
    "jax-fluids",
    "physicsnemo",
    "domino",
    "transolver",
    "precice",
    "fluid-structure-interaction",
    "verification-validation",
    "uncertainty-quantification",
    "neural-operators",
    "agentic-cae",
    "provenance",
    "reproducibility",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: POSIX :: Linux",
]
# Base deps — stdlib + these only. PLATFORM-NOT-HUB invariant.
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "loguru>=0.7",
    "dvc>=3.55",
]

[project.urls]
Homepage = "https://github.com/ernesto01louis/aero-research-platform"
Repository = "https://github.com/ernesto01louis/aero-research-platform"
Issues = "https://github.com/ernesto01louis/aero-research-platform/issues"
Changelog = "https://github.com/ernesto01louis/aero-research-platform/blob/main/CHANGELOG.md"

[project.scripts]
# Stage 03 — the aero CLI entrypoint (typer app).
aero = "aero.cli:app"

[project.optional-dependencies]
# Heavy / domain-specific extras are populated in their respective stages.
# Each kept as a placeholder list so `pip install -e .[<extra>]` resolves
# cleanly (to nothing) until the stage that populates it lands.

# Stage 03 — OpenFOAM walking skeleton (versions pinned in ADR-003)
openfoam = [
    "pyfoam>=2023.7",
    "ofpp>=0.12",
    "xarray>=2024.10",
    "mlflow>=2.20",
]

# Stage 06 — SU2 v8 adapter (versions pinned in ADR-006).
# The SU2 Python wrapper (pysu2) is built into the su2-v8 SIF, not pip-installed
# — `SU2_CFD` runs inside the container. Host-side, the adapter needs only
# numpy (base dep); `meshio` converts any non-native mesh asset to `.su2`,
# `mpi4py` is the launch-side binding for multi-rank SU2 runs. Independent of
# the `openfoam` extra — neither pulls the other (Stage-06 guardrail 3).
su2 = [
    "meshio>=5.3",
    "mpi4py>=4.0",
]

# Stage 07 — PyFR (flux reconstruction, GPU-resident). The `pyfr` package itself
# is built into the pyfr.sif SIF (`pyfr run` runs inside the container); host-
# side the adapter only needs numpy (base) + the case-writer deps. h5py / mako
# / mpi4py are listed so the platform's V&V dashboard tooling can decode PyFR's
# HDF5 outputs (.pyfrm, .pyfrs) when needed. `gmsh` is NOT a host dep — the
# host-side mesh emitter is pure numpy (see aero/adapters/_meshing/), and the
# SIF carries `gmsh` for any DVC-tracked `.msh` import path.
pyfr = [
    "h5py>=3.10",
    "mako>=1.3",
]

# Stage 07 — NekRS (spectral element, GPU-resident). The `nekrs` binary is in
# the nekrs.sif; host-side we only need `meshio` to read any tooling-emitted
# Nek5000-format meshes (.re2 / .ma2 are binary; meshio's nek5000 reader is
# the host-side bridge for V&V dashboard introspection).
nekrs = [
    "meshio>=5.3",
]

# Stage 08 — JAX-Fluids 2.x (differentiable CFD). The upstream calls its
# second-generation rewrite "2.0" but the GitHub tag scheme is `JAX-Fluids-
# v0.2.x`; v0.2.1 is the resolved pin (ADR-008 §D1). MIT-licensed (the
# stage prompt's GPL-3 assumption was incorrect — corrected in ADR-008 §D2).
# JAX-Fluids is NOT on PyPI; the install is via git+url.
#
# Host-side, only `h5py` is needed to read the solver's HDF5 outputs in the
# adapter's `load()` step. JAX + jaxlib + jaxfluids live in the SIF; if a
# Stage-13 in-process differentiable_run wants gradients on the host (i.e.
# not via the SIF), the operator opts in by installing this extra in a
# Python 3.12 venv against a CUDA 12.4-compatible host driver.
jax-fluids = [
    "h5py>=3.10",
    "jax[cuda12]==0.4.34",
    "jaxlib==0.4.34",
    # ac7c090f27cffa1e05dc986d9bfe4163c31f1c94 is the post-v0.2.1 bug-fix
    # commit ("adding missing inits", 2026-05-18). v0.2.1 ships without
    # jaxfluids.levelset.geometry/__init__.py and fails at import. ADR-008 §D1.
    "jaxfluids @ git+https://github.com/tumaer/JAXFLUIDS.git@ac7c090f27cffa1e05dc986d9bfe4163c31f1c94",
]

# Stage 08 — surrogate baselines (Torch + PyG). PyG is the platform-wide GNN
# library choice (ADR-008 §D6), aligned with PhysicsNeMo's migration. The
# three Stage-08 baselines (MLP, FNO, MeshGraphNet) all live inside the
# `surrogate-smoke.sif`; this extra exists for host-side test / lint passes
# (CPU subsets, certificate fixtures) and for Stage-09's production training
# entrypoint which reuses the same wheels.
surrogate-smoke = [
    "torch>=2.5",
    "torch-geometric>=2.6",
    "einops>=0.8",
    "mlflow>=2.20",
    "numpy>=1.26",
]

# Stage 09 — NVIDIA PhysicsNeMo (CUDA 12). DoMINO production surrogate.
# The DoMINO net + its training run INSIDE physicsnemo.sif, which wraps the NGC
# container `nvcr.io/nvidia/physicsnemo/physicsnemo:25.08` (ADR-010). This extra
# exists for host-side test/lint passes and the on-pod entrypoint's imports; it
# is NOT pulled by the base `import aero` (PLATFORM-NOT-HUB / import-platform-only).
# PyG is the platform GNN library (ADR-008 §D6); warp-lang is DoMINO's geometry
# kernel backend. The `nvidia-physicsnemo` pin MUST match the version bundled in
# the 25.08 container — confirmed at first build (Phase 2, 2026-06-02) as
# physicsnemo 1.2.0 / torch-geometric 2.6.1 / warp 1.8.1, locked in ADR-010
# (Hard Rule 8). See the ADR-010 amendment.
physicsnemo-cu12 = [
    "nvidia-physicsnemo[cu12]==1.2.0",
    "torch-geometric>=2.6",
    "warp-lang>=1.4",
]

# Stage 11 — preCICE 3 multi-physics coupling
precice = [
    # populated in stage-11: pyprecice
]

# Stage 04 — provenance backbone (version floors recorded in ADR-004)
provenance = [
    "mlflow>=2.20",
    "dvc[s3]>=3.55",
    "boto3>=1.35",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
]

# Stage 05 — V&V harness (pointwise reference-data comparison; pin in ADR-005)
vv = [
    "scipy>=1.14",
]

# Stage 12 — UQ via UQpy + Dakota
uq = [
    # populated in stage-12: UQpy, chaospy, salib, pyDOE3
]

# Stage 14 — agentic CAE
agentic = [
    # populated in stage-14: nvidia-nat, langgraph, mcp
]

# Stage 15 — literature mining
literature = [
    # populated in stage-15: semanticscholar, arxiv, pyalex,
    # sentence-transformers, pgvector
]

# Stage 07 / 13 — cloud GPU rental orchestration. Stage 07 ships a *minimal*
# RunPod executor that calls the RunPod GraphQL API via `requests` — no
# vendor SDK dependency (`runpod`/`lambdalabs`/`vast-python` are deliberately
# avoided; their schemas churn faster than the platform's audit cadence
# tolerates). Stage 13 promotes this into the full multi-cloud cost router
# and may add the vendor SDKs then.
gpu-rental = [
    "requests>=2.32",
]
orchestration = [
    # populated in stage-13: prefect>=3.0, covalent
]

# Development
dev = [
    "ruff>=0.13",
    "mypy>=1.18",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "pre-commit>=4.6",
    "cffconvert>=2.0",
    "validate-pyproject>=0.24",
]

# Documentation
docs = [
    # populated in stage-16: mkdocs>=1.6, mkdocs-material>=9.5,
    # mkdocstrings[python]>=0.27
]

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------

[tool.hatch.metadata]
# Stage 08: `aero[jax-fluids]` carries `jaxfluids @ git+https://github.com/
# tumaer/JAXFLUIDS.git@JAX-Fluids-v0.2.1` — a "direct reference" because
# JAX-Fluids is NOT on PyPI (ADR-008 §D1). Hatchling rejects direct refs by
# default; this flag opts in. Documented + pinned exactly via the tag, so
# the security posture stays auditable.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aero"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["aero", "tests"]

[tool.ruff.lint]
# Default rule set + stricter idioms
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true   # liberal default; tightened per-module below
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Strict on aero/ core only. Per Hard Rule 8 / Constitution Invariant 2,
# relaxations to this stricture require an ADR.
module = "aero.*"
strict = true
disallow_any_explicit = false   # numpy/pydantic interop needs flexibility
warn_return_any = true

[[tool.mypy.overrides]]
# Tests are lenient by convention; assertions carry the contract.
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Stage-08 surrogate baselines subclass torch.nn.Module / torch_geometric
# .nn.MessagePassing — both come back as `Any` under `ignore_missing_imports
# =true`, which mypy strict refuses to subclass. Relax that one rule for the
# baselines; the loader / cert / provenance contracts they conform to are
# still strict-typed in `aero.surrogates._common.*`. ADR-008 §D6.
module = "aero.surrogates.baselines.*"
disallow_subclassing_any = false

[[tool.mypy.overrides]]
# Stage-09 DoMINO wraps PhysicsNeMo's DoMINO net + torch_geometric; like the
# Stage-08 baselines these resolve to `Any` under ignore_missing_imports, which
# mypy strict refuses to subclass. The Surrogate / certificate / provenance
# contracts the wrapper conforms to stay strict-typed in `_common`. ADR-010.
module = "aero.surrogates.domino.*"
disallow_subclassing_any = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: long-running test (skipped in default unit suite)",
    "vv: verification & validation test against reference data",
    "mesh_sweep: multi-grid GCI study (nightly only; excluded from PR-gating)",
    "moving: multi-hour moving-mesh V&V case (runs via the driver; excluded from PR-gating vv-required)",
    "stage_03: tests gated to stage 03 deliverables",
    "stage_04: tests gated to stage 04 deliverables",
    "stage_05: tests gated to stage 05 deliverables",
    "stage_06: tests gated to stage 06 deliverables",
    "stage_07: tests gated to stage 07 deliverables",
    "stage_08: tests gated to stage 08 deliverables",
    "stage_09: tests gated to stage 09 deliverables",
    "stage_10: tests gated to stage 10 deliverables",
    "stage_11: tests gated to stage 11 deliverables",
    "stage_12: tests gated to stage 12 deliverables",
    "stage_13: tests gated to stage 13 deliverables",
    "stage_14: tests gated to stage 14 deliverables",
    "stage_15: tests gated to stage 15 deliverables",
    "stage_16: tests gated to stage 16 deliverables",
]

[tool.uv]
required-version = ">=0.5"
